--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "whatsapp-bot",
+  "name": "Rivver",
   "version": "2.1.0",
   "description": "Whatsapp Bot - Node Js",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "ArugaZ",
+  "author": "AveraZ",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ArugaZ/whatsapp-bot.git"
+    "url": "https://github.com/sigut35A/de.git"
   },
   "bugs": {
-    "url": "https://github.com/ArugaZ/whatsapp-bot/issues"
+    "url": "https://github.com/sigut35A/de/issues"
   },
-  "homepage": "https://github.com/ArugaZ/whatsapp-bot",
+  "homepage": "https://github.com/sigut35A/de",
   "license": "ISC",
   "dependencies": {
     "@open-wa/wa-automate": "^3.1.0",
